# CPP-Game-Engine

./: .gitignore  CMakeLists.txt  Makefile  game  main.cpp
archive/: Makefile
core/: engine.cpp  engine.h
renderer/: window.cpp  window.h
